--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app",
+  "name": "cashpile-node-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "Rohan Patra",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
